# workflow

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  pyproject.toml
.claude/: settings.local.json
examples/: README.md  simple_test.py
workflow/: __init__.py  cli.py
workflow/agents/: base_agent.py  coder_agent.py  executor_agent.py  orchestrator.py  reviewer_agent.py
workflow/storage/: history_store.py  models.py  workflow_store.py
workflow/tools/: base.py  bash_executor.py  python_executor.py
